--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,33 +1,60 @@
-<%= link_to "Continuer mes achats", items_path %>
-<%= link_to "Home", root_path %>
 
-<div class="px-4 py-8">
-  <div class="pt-16 grid grid-cols-2 gap-4">
-    <% @cart.cart_items.each do |cartItem| %>
-      <div class="flex flex-col shadow-2xl rounded-xl overflow-hidden">
-        <div class="relative" style="padding-bottom: 80%">
-          <%= cl_image_tag cartItem.item.photos[0].key, class:'absolute h-full w-full inset-0 object-cover shadow'  %>
+<div class="px-2 pt-2">
+  <div class="flex justify-between">
+    <%= link_to "Continuer mes achats", items_path, class:'text-gray-500' %>
+    <%= button_to 'Vider le panier', @cart, method: :delete, data: { confirm: "Etes-vous sur?" }, class:'bg-white text-gray-500' %>
+  </div>
+  <div class="pt-8">
+    <span class="text-xl font-medium"><%= pluralize(cart_count_over_one, 'article') %> dans votre panier</span>
+  </div>
+  <div class="pt-6 flex justify-between">
+    <span>Total(<%= pluralize(cart_count_over_one, 'article') %>)</span>
+    <span><%= humanized_money_with_symbol(@cart.total_price) %></span>
+  </div>
+  <div class="pt-4">
+    <%= form_tag orders_path do %>
+    <%= hidden_field_tag 'cart_id', @cart.id %>
+    <%= submit_tag 'Finaliser la commande', class:'w-full font-medium bg-black text-white py-3 rounded-3xl' %>
+    <% end %>
+  </div>
+
+  <div class="pt-4 px-2 flex flex-col">
+    <% @cart.cart_items.each do |cart_item| %>
+      <div class="pt-8 flex space-x-6">
+        <div class="flex flex-col justify-start ">
+          <%= cl_image_tag cart_item.item.photos[0].key, class:'w-20 h-20 object-cover rounded-xl' %>
+          <span class="pt-2 text-sm font-bold text-left"><%= cart_item.item.title %></span>
+          <span class="pt-1 text-japonica-500 text-sm"><%= cart_item.item.category %></span>
+
+
         </div>
-        <div class="px-4 py-4 h-24">
-          <span class="text-sm"><%= cartItem.item.title %></span>
-        </div>
-        <div>
-          <span><%= humanized_money_with_symbol(cartItem.item.price) %></span>
-        </div>
-        <div>
-          <%= link_to 'Remove item', cartItem, method: :delete, data:{ confirm: "are you sure?" } %>
+        <div class="text-justify pt-8">
+          <span class="pt-4"><%= cart_item.item.description[0..180] %></span>
+
+          <div class="flex justify-between pt-4">
+            <span class="font-bold text-gray-700"><%= link_to 'supprimer', cart_item, method: :delete, data:{ confirm: "are you sure?" } %></span>
+            <span class="font-bold"> <%= humanized_money_with_symbol(cart_item.item.price) %></span>
+
+
+          </div>
         </div>
       </div>
     <% end %>
   </div>
 </div>
-Total : <%= humanized_money_with_symbol(@cart.total_price) %>
 
-<%= form_tag orders_path do %>
-  <%= hidden_field_tag 'cart_id', @cart.id %>
-  <%= submit_tag 'Payer' %>
-<% end %>
 
-<%= button_to 'Vider le panier', @cart, method: :delete, data: { confirm: "Etes-vous sur?" } %>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
