--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -10,41 +10,50 @@
     <%= cl_image_tag @item.photos[0].key, class:'w-full rounded-xl'  %>
   </div>
   <div class="pt-4">
-    <span class="font-bold text-2xl"><%= humanized_money_with_symbol(@item.price) %></span>
+    <span class="font-bold text-2xl"><%= @item.price %>€</span>
   </div>
   <div class="pt-2">
+    <span class="px-2 py-1 bg-japonica-500 rounded-2xl text-white">Pièce unique</span>
+  </div>
+  <div class="pt-4">
     <%= @item.description[0...197] %>
   </div>
   <div class="pt-4">
     <%= button_to 'Ajouter au panier', cart_items_path(item_id: @item), class:'w-full py-3 bg-black text-white rounded-3xl' %>
   </div>
+  <div data-controller="shop">
+    <div class="mt-6 py-2 px-2 flex justify-between items-center bg-gray-200">
+      <button data-action="click->shop#toggle" class="flex justify-between w-full focus:outline-none">
+        <span>Détail de l'article</span>
+        <svg data-shop-target="open" class=" w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>
+        <svg data-shop-target="close" class=" w-6 hidden text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"/></svg>
+      </button>
+    </div>
+    <div data-shop-target="toggleable">
+      <div class='px-4'>
+        <div class="pt-4 flex items-center space-x-2">
+          <svg class="w-6" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22 23"><path d="M12.605 13.1l2.273-4.409-1.623-1.686-4.042-4.226a.68.68 0 00-.481-.202.68.68 0 00-.482.202.748.748 0 00-.172.48c0 .176.061.346.172.478L12.037 8.3l-.652.68-5.408-5.52a.704.704 0 00-.5-.217.679.679 0 00-.499.217.756.756 0 00-.194.508c0 .189.07.37.194.508l5.06 5.913-.641.68-4.722-4.896a.653.653 0 00-1.008 0 .748.748 0 00-.172.479c0 .176.06.346.172.479l4.4 5.328-.642.68-3.758-3.325a.688.688 0 00-.459-.176.688.688 0 00-.458.176.756.756 0 00-.207.522c0 .196.075.384.207.522l3.392 3.537 5.188 5.424c.17.179.372.32.595.417a1.762 1.762 0 001.405 0c.223-.096.425-.238.595-.417l4.583-4.744.495-.518c.24-.252.41-.57.487-.916a2 2 0 00-.047-1.048L16.5 4.964l-.55.192a.708.708 0 00-.32.24.757.757 0 00-.147.382l.367 3.93-2.595 4.073-.65-.681z" fill="#222"/></svg>
+          <span>Fait main</span>
+        </div>
+        <div class="pt-2 flex items-center space-x-2">
+          <svg class="w-6" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18.1 5.76c.7 1.632.9 3.456.4 5.376-.8 3.264-3.5 5.856-6.9 6.624-2 .48-3.9.192-5.6-.384v1.344l1.5 1.44h12l1.5-1.44V7.2l-1.5-1.44h-1.4z" fill="#000"/><path d="M9.5 1.92C5.4 1.92 2 5.184 2 9.12c0 3.936 3.4 7.2 7.5 7.2s7.5-3.264 7.5-7.2c0-3.936-3.4-7.2-7.5-7.2zM7.8 14.4a5.64 5.64 0 01-1.7-.864l8-7.68c.4.48.7 1.056.9 1.632L7.8 14.4zm3.4-10.56c.6.192 1.2.48 1.7.864l-8 7.68c-.4-.48-.7-1.056-.9-1.632l7.2-6.912zM9 3.648L3.8 8.64C4 5.952 6.2 3.84 9 3.648zm1 10.944L15.2 9.6c-.2 2.688-2.4 4.8-5.2 4.992z" fill="#000"/>
+          <span>Matériaux</span>
+        </div>
+        <div class="pt-2">
+          <span class="text-xl font-medium">  <%= @item.materials.join(', ') %> </span>
+        </div>
 
-  <div class="mt-6 py-2 px-2 flex justify-between items-center bg-gray-200">
-    <span>Détail de l'article</span>
-    <svg class="w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>
-  </div>
-  <div class='px-4'>
-    <div class="pt-4 flex items-center space-x-2">
-      <svg class="w-6" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22 23"><path d="M12.605 13.1l2.273-4.409-1.623-1.686-4.042-4.226a.68.68 0 00-.481-.202.68.68 0 00-.482.202.748.748 0 00-.172.48c0 .176.061.346.172.478L12.037 8.3l-.652.68-5.408-5.52a.704.704 0 00-.5-.217.679.679 0 00-.499.217.756.756 0 00-.194.508c0 .189.07.37.194.508l5.06 5.913-.641.68-4.722-4.896a.653.653 0 00-1.008 0 .748.748 0 00-.172.479c0 .176.06.346.172.479l4.4 5.328-.642.68-3.758-3.325a.688.688 0 00-.459-.176.688.688 0 00-.458.176.756.756 0 00-.207.522c0 .196.075.384.207.522l3.392 3.537 5.188 5.424c.17.179.372.32.595.417a1.762 1.762 0 001.405 0c.223-.096.425-.238.595-.417l4.583-4.744.495-.518c.24-.252.41-.57.487-.916a2 2 0 00-.047-1.048L16.5 4.964l-.55.192a.708.708 0 00-.32.24.757.757 0 00-.147.382l.367 3.93-2.595 4.073-.65-.681z" fill="#222"/></svg>
-      <span>Fait main</span>
-    </div>
-    <div class="pt-2 flex items-center space-x-2">
-      <svg class="w-6" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18.1 5.76c.7 1.632.9 3.456.4 5.376-.8 3.264-3.5 5.856-6.9 6.624-2 .48-3.9.192-5.6-.384v1.344l1.5 1.44h12l1.5-1.44V7.2l-1.5-1.44h-1.4z" fill="#000"/><path d="M9.5 1.92C5.4 1.92 2 5.184 2 9.12c0 3.936 3.4 7.2 7.5 7.2s7.5-3.264 7.5-7.2c0-3.936-3.4-7.2-7.5-7.2zM7.8 14.4a5.64 5.64 0 01-1.7-.864l8-7.68c.4.48.7 1.056.9 1.632L7.8 14.4zm3.4-10.56c.6.192 1.2.48 1.7.864l-8 7.68c-.4-.48-.7-1.056-.9-1.632l7.2-6.912zM9 3.648L3.8 8.64C4 5.952 6.2 3.84 9 3.648zm1 10.944L15.2 9.6c-.2 2.688-2.4 4.8-5.2 4.992z" fill="#000"/>
-      <span>Matériaux</span>
-    </div>
-    <div class="pt-2">
-      <span class="text-xl font-medium">  <%= @item.materials.join(', ') %> </span>
-    </div>
+        <div class="pt-2">
+          <div>Description :</div>
+          <span class="pt-2"><%= @item.description %></span>
+        </div>
 
-    <div class="pt-2">
-      <div>Description :</div>
-      <span class="pt-2"><%= @item.description %></span>
-    </div>
-
-    <div class="pt-12 flex flex-col">
-      <span>Largeur: <%= @item.width / 10 %> cm</span>
-      <span>Longueur: <%= @item.length / 10 %> cm</span>
-      <span>Hauteur: <%= @item.height / 10 %> cm</span>
+        <div class="pt-12 flex flex-col">
+          <span>Largeur: <%= @item.width / 10 %> cm</span>
+          <span>Longueur: <%= @item.length / 10 %> cm</span>
+          <span>Hauteur: <%= @item.height / 10 %> cm</span>
+        </div>
+      </div>
     </div>
   </div>
 
