--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 
   <%#= render "shared/sticky_logo" %>
 <div class="h-screen">
-  <div class=" h-5/6 bg-cover bg-center text-center" style="background-image:url(https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80);">
+  <div class=" h-5/6 bg-cover bg-center text-center" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80);">
     <div class="pt-32 px-2">
       <h1 class="text-white text-4xl font-semibold ">Objets en céramique fait mains</h1>
     </div>
@@ -13,7 +13,7 @@
   </div>
 </div>
 <div class="px-4">
-  <div class="pt-12">
+  <div class="">
     <h2 class="text-center text-2xl font-bold">Les dernières créations de mon atelier</h2>
   </div>
 </div>
