--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,20 +1,40 @@
 
-  <%#= render "shared/sticky_logo" %>
-<div class="h-screen">
-  <div class=" h-5/6 bg-cover bg-center text-center" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80);">
+<!-- Sticky logo -->
+<%#= render "shared/sticky_logo" %>
+
+<!-- header with background and CTA-->
+
+<header class="h-screen">
+  <div class="h-9/10 bg-cover bg-center text-center" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80);">
     <div class="pt-32 px-2">
-      <h1 class="text-white text-4xl font-semibold ">Objets en céramique fait mains</h1>
+      <h1 class="text-white text-3xl font-semibold tracking-tight">Objets en céramique fait mains</h1>
     </div>
     <div class="pt-32">
       <%= link_to items_path do %>
-        <button class="px-6 py-4 rounded-xl text-white border-2 border-white font-semibold hover:bg-white hover:text-japonica-500">Découvrir</button>
+        <button class="px-6 py-4 text-lg text-white border-2 border-white font-semibold rounded-xl hover:bg-white hover:text-japonica-500">Découvrir</button>
       <% end %>
     </div>
   </div>
-</div>
-<div class="px-4">
-  <div class="">
-    <h2 class="text-center text-2xl font-bold">Les dernières créations de mon atelier</h2>
+</header>
+
+
+<!-- First main section with shop category buttons and last articles -->
+<main class="px-4 pt-4">
+  <div class="px-4">
+    <h2 class="text-center text-2xl font-bold tracking-tight">Les dernières créations de mon atelier</h2>
   </div>
-</div>
+
+  <div class="pt-12">
+    <div class="flex flex-wrap gap-2 justify-center">
+
+<!--       <button class="px-2 py-2 rounded-xl bg-gray-700">Aquarium</button>
+      <button class="px-2 py-2 rounded-xl bg-gray-700">Décoration</button>
+      <button class="px-2 py-2 rounded-xl bg-gray-700">Cuisine</button>
+      <button class="px-2 py-2 rounded-xl bg-gray-700">Sculptures</button>
+      <button class="px-2 py-2 rounded-xl bg-gray-700">Photophores</button>
+      <button class="px-2 py-2 rounded-xl bg-gray-700">Pots, coupes</button>
+      <button class="px-2 py-2 rounded-xl bg-gray-700">Extérieur</button>
+ -->    </div>
+  </div>
+</main>
 
