--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,18 +1,24 @@
 
-<%= render "shared/navbar_light" %>
+<div class="lg:hidden">
+  <%= render "shared/navbar_light" %>
+</div>
 
-<div class="px-2 min-h-screen max-w-6xl mx-auto">
-  <div class="flex justify-between">
-    <span class="font-bold text-lg lg:text-xl"><%= @item.title %></span>
+<div class="hidden lg:block">
+  <%= render "shared/navbar" %>
+</div>
+
+<div class="px-2 lg:py-8 max-w-5xl mx-auto">
+  <div class="flex justify-between lg:flex-col-reverse">
+    <span class="font-bold text-lg md:text-xl lg:text-2xl 2xl:text-3xl "><%= @item.title %></span>
     <span class="text-japonica-500 font-medium lg:text-lg"><%= @item.category %></span>
   </div>
 
 
 <!--   sliders de photos sur un petit écran en dessous de desktop -->
-  <div class="pt-2 overflow-x-auto scrollbars-hidden h-1/2 lg:hidden">
-    <div class="px-2 inline-flex h-full space-x-4">
+  <div class="pt-2 overflow-x-auto scrollbars-hidden lg:hidden">
+    <div class="inline-flex h-full space-x-2">
       <% @item.photos.each do |photo| %>
-        <div class="w-72">
+        <div class="w-72 h-80">
           <div class="relative h-full" style="padding-bottom: 80%">
             <%= cl_image_tag photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-xl'  %>
           </div>
@@ -22,17 +28,17 @@
   </div>
 
 <!-- grid de photos sur desktop -->
-  <div class="hidden lg:pt-2 lg:grid lg:grid-cols-5 lg:grid-rows-4 lg:gap-2">
-    <div class="relative h-full row-span-4 col-span-3" style="padding-bottom: 80%">
+  <div class="hidden lg:pt-2 lg:grid lg:grid-rows-2 lg:grid-cols-5  lg:gap-2">
+    <div class="relative h-full row-span-2 col-span-3" style="padding-bottom: 80%">
       <%= cl_image_tag @item.photos[0].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-xl'  %>
     </div>
     <% @item.photos.drop(2).each do |photo| %>
-      <div class="relative h-full row-span-2 col-span-1" style="padding-bottom: 80%">
+      <div class="relative h-full col-span-1" style="padding-bottom: 80%">
         <%= cl_image_tag photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-xl'  %>
       </div>
     <% end %>
 
-    <div class="relative h-full row-span-2 col-span-2" style="padding-bottom: 80%">
+    <div class="relative h-full col-span-2" style="padding-bottom: 80%">
       <%= cl_image_tag @item.photos[1].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-xl'  %>
     </div>
   </div>
@@ -55,11 +61,11 @@
 
     <div class="md:flex md:flex-col max-w-2xl md:mr-2 md:w-3/5">
       <div data-controller="shop">
-        <div class="mt-6 py-2 px-2 flex justify-between items-center bg-gray-200 lg:mt-4">
+        <div class="mt-6 py-2 px-2 flex justify-between items-center bg-gray-100 lg:mt-4">
           <button data-action="click->shop#toggle" class="flex justify-between w-full focus:outline-none">
             <span>Détail de l'article</span>
-            <svg data-shop-target="open" class=" w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>
-            <svg data-shop-target="close" class=" w-6 hidden text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"/></svg>
+            <svg data-shop-target="close" class=" w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"/></svg>
+            <svg data-shop-target="open" class=" w-6 hidden text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>
           </button>
         </div>
         <div data-shop-target="toggleable">
@@ -94,12 +100,12 @@
       </div>
 
 
-      <div class="mt-6 py-2 px-2 flex justify-between items-center bg-gray-200">
+      <div class="mt-6 py-2 px-2 flex justify-between items-center bg-gray-100">
         <span>Conditions de ventes et de livraison</span>
         <svg class="w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>
       </div>
 
-      <div class="mt-6 py-2 px-2 flex justify-between items-center bg-gray-200">
+      <div class="mt-6 py-2 px-2 flex justify-between items-center bg-gray-100">
         <span>Contactez-moi</span>
         <svg class="w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>
       </div>
