--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,7 +7,7 @@
   <%= render "shared/navbar" %>
 </div>
 
-<div class="px-2 lg:py-8 max-w-5xl mx-auto">
+<div class="px-2 lg:py-8 lg:max-w-4xl 2xl:max-w-5xl mx-auto">
   <div class="flex justify-between lg:flex-col-reverse">
     <span class="font-bold text-lg md:text-xl lg:text-2xl 2xl:text-3xl "><%= @item.title %></span>
     <span class="text-japonica-500 font-medium lg:text-lg"><%= @item.category %></span>
@@ -60,15 +60,15 @@
     </div>
 
     <div class="md:flex md:flex-col max-w-2xl md:mr-2 md:w-3/5">
-      <div data-controller="shop">
+      <div data-controller="item-descriptions">
         <div class="mt-6 py-2 px-2 flex justify-between items-center bg-gray-100 lg:mt-4">
-          <button data-action="click->shop#toggle" class="flex justify-between w-full focus:outline-none">
+          <button data-action="click->item-descriptions#descriptionToggle" class="flex justify-between w-full focus:outline-none">
             <span>Détail de l'article</span>
-            <svg data-shop-target="close" class=" w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"/></svg>
-            <svg data-shop-target="open" class=" w-6 hidden text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>
+            <svg data-item-descriptions-target="descriptionClose" class=" w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"/></svg>
+            <svg data-item-descriptions-target="descriptionOpen" class=" w-6 hidden text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>
           </button>
         </div>
-        <div data-shop-target="toggleable">
+        <div data-item-descriptions-target="descriptionToggleable">
           <div class='px-4'>
             <div class="pt-4 flex items-center space-x-2">
               <svg class="w-6" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22 23"><path d="M12.605 13.1l2.273-4.409-1.623-1.686-4.042-4.226a.68.68 0 00-.481-.202.68.68 0 00-.482.202.748.748 0 00-.172.48c0 .176.061.346.172.478L12.037 8.3l-.652.68-5.408-5.52a.704.704 0 00-.5-.217.679.679 0 00-.499.217.756.756 0 00-.194.508c0 .189.07.37.194.508l5.06 5.913-.641.68-4.722-4.896a.653.653 0 00-1.008 0 .748.748 0 00-.172.479c0 .176.06.346.172.479l4.4 5.328-.642.68-3.758-3.325a.688.688 0 00-.459-.176.688.688 0 00-.458.176.756.756 0 00-.207.522c0 .196.075.384.207.522l3.392 3.537 5.188 5.424c.17.179.372.32.595.417a1.762 1.762 0 001.405 0c.223-.096.425-.238.595-.417l4.583-4.744.495-.518c.24-.252.41-.57.487-.916a2 2 0 00-.047-1.048L16.5 4.964l-.55.192a.708.708 0 00-.32.24.757.757 0 00-.147.382l.367 3.93-2.595 4.073-.65-.681z" fill="#222"/></svg>
@@ -97,17 +97,29 @@
 
           </div>
         </div>
-      </div>
 
 
-      <div class="mt-6 py-2 px-2 flex justify-between items-center bg-gray-100">
-        <span>Conditions de ventes et de livraison</span>
-        <svg class="w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>
-      </div>
 
-      <div class="mt-6 py-2 px-2 flex justify-between items-center bg-gray-100">
-        <span>Contactez-moi</span>
-        <svg class="w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>
+        <div class="mt-6 py-2 px-2 flex justify-between items-center bg-gray-100">
+          <button data-action="click->item-descriptions#deliveryToggle" class="flex justify-between w-full focus:outline-none">
+            <span>Conditions de ventes et de livraison</span>
+            <svg data-item-descriptions-target="deliveryClose" class=" w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"/></svg>
+            <svg data-item-descriptions-target="deliveryOpen" class=" w-6 hidden text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>        </button>
+        </div>
+        <div data-item-descriptions-target="deliveryToggleable" class="px-4 pt-4">
+          <span>Date d'arrivée estimée : <%= Date.today.next_day(7).strftime("%a, %d, %B") %>  </span>
+        </div>
+
+        <div class="mt-6 py-2 px-2 flex justify-between items-center bg-gray-100">
+          <button data-action="click->item-descriptions#contactToggle" class="flex justify-between w-full focus:outline-none">
+            <span>Contactez-moi</span>
+            <svg data-item-descriptions-target="contactClose" class=" w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"/></svg>
+            <svg data-item-descriptions-target="contactOpen" class=" w-6 hidden text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>
+          </button>
+        </div>
+        <div data-item-descriptions-target="contactToggleable" class="hidden">
+          titi
+        </div>
       </div>
     </div>
   </div>
