--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -28,7 +28,7 @@
   </div>
 
 <!-- grid de photos sur desktop -->
-  <div class="hidden lg:pt-2 lg:grid lg:grid-rows-2 lg:grid-cols-5  lg:gap-2">
+  <div data-controller="slideshow" class="hidden lg:pt-2 lg:grid lg:grid-rows-2 lg:grid-cols-5  lg:gap-2">
     <div class="relative h-full row-span-2 col-span-3" style="padding-bottom: 80%">
       <%= cl_image_tag @item.photos[0].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-xl'  %>
     </div>
@@ -40,6 +40,29 @@
 
     <div class="relative h-full col-span-2" style="padding-bottom: 80%">
       <%= cl_image_tag @item.photos[1].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-xl'  %>
+
+      <button data-action="slideshow#show" class="absolute right-2 bottom-2 px-2 py-2 bg-white text-black rounded-xl"> Voir toutes les photos</button>
+      <div data-slideshow-target="allSlides" class="hidden fixed z-20 inset-0 w-full h-full bg-white">
+        <button data-action="slideshow#show" class="mx-4 mt-4 px-2 py-2">
+          <svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/></svg>
+        </button>
+
+        <button data-action="slideshow#previous" class="absolute inset-y-1/2 left-1 px-4 pt-4 pb-12 focus:outline-none xl:left-5">
+          <svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg>
+        </button>
+
+        <button data-action="slideshow#next" class="absolute inset-y-1/2 right-1 px-4 pt-4 pb-12 focus:outline-none xl:right-5">
+          <svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/></svg>
+        </button>
+        <div class="flex justify-center">
+          <span data-slideshow-target="counter" class="text-xl">1&nbsp</span><span class="text-xl">/ <%= @item.photos.length %> </span>
+        </div>
+        <% @item.photos.each do |photo| %>
+          <div data-slideshow-target="slide" class="mt-4 relative max-w-4xl mx-auto 2xl:mt-24" style="padding-bottom: 80%">
+            <%= cl_image_tag photo.key, class:'absolute w-full inset-0 object-cover object-center shadow rounded-xl'  %>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
 
